fixed nav alignment

--- a/src/index.css
+++ b/src/index.css
@@ -17,21 +17,21 @@ code {
 
 .Nav {
   position: fixed;
+  display: flex;
+  justify-content: center;
   width: 100%;
-  height: 30px;
-  padding: 45px 0;
+  height: 125px;
   z-index: 100;
   background: rgba(28, 23, 100, 0.5);
 
 }
 
 .NavGroup {
-  max-width: 800px;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(3, auto);
+  width: 100%;
+  /* margin: 0 auto; */
+  display: flex;
   align-items: center;
-  justify-items: center;
+  justify-content: space-around;
   color: paleturquoise;
   
 }
